# scuff-em

./: configure.ac  scuff-em-pkgconfig
applications/: Makefile.am
applications/scuff-avescatter/: CreateSNEQData.cc  Makefile.am  NeqScattering.cc  readme.md  scuff-avescatter  scuff-avescatter.cc  scuff-avescatter.h
applications/scuff-ldos/: scuff-ldos
applications/scuff-neq/: scuff-integrate
applications/scuff-spectrum/: scuff-spectrum  tBeyn411
examples/: Makefile.am
examples/Spheroid_Avscat/: Ellipsoid.geo  Makefile.am  compare_results.py  oblate.AVSCAT.EMTPFT  oblate.msh  oblate.scuffgeo  prolate.AVSCAT.EMTPFT  prolate.msh  prolate.scuffgeo  readme.md
libs/libhmat/: tSMatrix
libs/libhrutil/: libhrutil.cc
tests/: CheckSCUFFData
