SUBDIRS =            	\
 DiffractionPatterns	\
 CorrugatedDisc     	\
 CubeTorus           	\
 GetTMatrix             \
 HalfSpaceLDOS          \
 ImplicitSubstrate      \
 MicrostripDevices  	\
 NanorodResonantModes	\
 PaulTrap               \
 PlateWithHole          \
 PerforatedThinFilm     \
 PlatonicSolids         \
 SiO2Spheres            \
 SiliconBeams           \
 SolidSphere            \
 SphericalShell         \
 Spheroid_Avscat	\
 StriplineCapacitor     \
 ThinFilm               \
 TwoBodyCapacitors      \
 WireAntenna		\
 YagiUdaAntennas     
