EXTRA_DIST=			\
 Ellipsoid.geo			\
 OmegaList.dat			\
 compare_results.py		\
 oblate.AVSCAT.EMTPFT		\
 oblate.msh			\
 oblate.scuffgeo		\
 oblate_exact.dat		\
 prolate.AVSCAT.EMTPFT		\
 prolate.msh			\
 prolate.scuffgeo		\
 prolate_exact.dat		\
 readme.md

pkgdatadir = $(datadir)/scuff-em/examples/Spheroid_Avscat
nodist_pkgdata_DATA = ${EXTRA_DIST}
